--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/francisco123neto/Clinica_Teste01#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
+    "npx": "^10.2.2",
     "path": "^0.12.7",
     "sequelize": "^6.18.0",
     "sequelize-cli": "^6.4.1"
