--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
-    "npx": "^10.2.2",
+    "npx": "^3.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.18.0",
     "sequelize-cli": "^6.4.1"
